--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,31 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+<ion-header>
+    <ion-toolbar color="light">
+        <ion-title class="title">Bienvenida a Easy Nails</ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="home-content ion-padding">
+    <div id="container">
+        <div class="welcome-container">
+            <img src="assets/icon/easy-nails.png" alt="Logo Easy Nails" class="logo" />
+            <h2 class="subtitle">Elige una opción</h2>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+            <ion-grid>
+                <ion-row>
+                    <ion-col size="12" size-md="6">
+                        <ion-button expand="block" class="home-button" (click)="agendarCita()">Agendar cita</ion-button>
+                    </ion-col>
+                    <ion-col size="12" size-md="6">
+                        <ion-button expand="block" class="home-button">Ver catálogo</ion-button>
+                    </ion-col>
+                    <ion-col size="12" size-md="6">
+                        <ion-button expand="block" class="home-button" (click)="perfil()">Mi perfil</ion-button>
+                    </ion-col>
+                    <ion-col size="12" size-md="6">
+                        <ion-button expand="block" class="home-button">Contacto</ion-button>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+        </div>
+    </div>
 </ion-content>
