--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,59 @@
+.home-content {
+    --background: #fff0f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 #container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 0 20px;
+    .title {
+        font-weight: bold;
+        font-size: 22px;
+        color: #d81b60;
+        text-align: center;
+    }
+    .welcome-container {
+        text-align: center;
+        margin-top: 20px;
+    }
+    .logo {
+        width: 130px;
+        height: auto;
+        margin-bottom: 10px;
+    }
+    .subtitle {
+        font-size: 18px;
+        color: #ad1457;
+        margin-bottom: 25px;
+        font-weight: 500;
+    }
+    .home-button {
+        margin: 10px 0;
+        --background: #f48fb1;
+        --background-hover: #f8bbd0;
+        --color: white;
+        --border-radius: 10px;
+        font-weight: 600;
+    }
+    strong {
+        font-size: 20px;
+        line-height: 26px;
+    }
+    p {
+        font-size: 16px;
+        line-height: 22px;
+        color: #8c8c8c;
+        margin: 0;
+    }
+    a {
+        text-decoration: none;
+    }
 }
