--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -24,7 +24,10 @@
         </ion-card>
 
         <p class="registro-link">
-            ¿No tienes cuenta? <a href="#">Regístrate aquí</a>
+            ¿No tienes cuenta? <a (click)="registro()">Regístrate aquí</a>
         </p>
+    </div>
+    <div #mensajeBienvenida class="mensaje-bienvenida oculto">
+        ¡Bienvenida a Easy Nails 💅!
     </div>
 </ion-content>
