--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -95,3 +95,24 @@ ion-label {
     opacity: 1;
     transition: opacity 0s;
 }
+
+.mensaje-bienvenida {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #e91e63;
+    color: white;
+    padding: 20px 30px;
+    border-radius: 30px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    z-index: 9999;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.mensaje-bienvenida.oculto {
+    opacity: 0;
+}
