--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,13 +16,10 @@
                         <ion-button expand="block" class="home-button" (click)="agendarCita()">Agendar cita</ion-button>
                     </ion-col>
                     <ion-col size="12" size-md="6">
-                        <ion-button expand="block" class="home-button">Ver catálogo</ion-button>
+                        <ion-button expand="block" class="home-button" (click)="perfil()">Manicuristas</ion-button>
                     </ion-col>
                     <ion-col size="12" size-md="6">
-                        <ion-button expand="block" class="home-button" (click)="perfil()">Mi perfil</ion-button>
-                    </ion-col>
-                    <ion-col size="12" size-md="6">
-                        <ion-button expand="block" class="home-button">Contacto</ion-button>
+                        <ion-button expand="block" class="home-button">Mi perfil</ion-button>
                     </ion-col>
                 </ion-row>
             </ion-grid>
