--- a/src/app/pages/catalogo/catalogo.page.html
+++ b/src/app/pages/catalogo/catalogo.page.html
@@ -2,6 +2,11 @@
     <ion-toolbar color="light">
         <ion-title class="title">Catálogo</ion-title>
     </ion-toolbar>
+    <ion-toolbar color="light">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="/home" text="Atrás" style="color: #e91e63; font-family: 'Poppins', sans-serif;"></ion-back-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
