--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,5 +1,5 @@
 .login-bg {
-    --background: #fff0f5; // Fondo rosado muy suave
+    --background: #fff0f5;
 }
 
 .login-container {
@@ -71,9 +71,7 @@ ion-label {
     margin-top: 30px;
     --border-radius: 12px;
     --background: #f48fb1;
-    /* rosado base */
     --background-hover: #f06292;
-    /* rosado más intenso al hover */
     --ripple-color: transparent;
     font-weight: bold;
     color: white;
